Added Properties Schema
